--- a/resume.html
+++ b/resume.html
@@ -200,7 +200,7 @@ h4 span:first-child {
 						Dwight Doane
 					</h1>
 					<h2>
-						JavaScript &amp;&amp; Frontend Developer
+						Elm &amp;&amp; JavaScript Developer
 					</h2>
 				</div>
 			</div>
@@ -225,7 +225,7 @@ h4 span:first-child {
 			<div class="col-sm-6">
 				<strong>Website</strong>
 				<div class="website">
-					<a href="http://dwit.us">http://dwit.us</a>
+					<a href="https://dwit.us">https://dwit.us</a>
 				</div>
 			</div>
 			</div>
@@ -236,7 +236,7 @@ h4 span:first-child {
 			<h3>About</h3>
 		</aside>
 		<div class="col-sm-9">
-			<p>Dwight Doane is a passionate web developer with a love for all things JavaScript.</p>
+			<p>Dwight Doane is a passionate developer obsessed with the World Wide Web.</p>
 		</div>
 	</section>
 	<section id="profiles" class="row">
@@ -265,6 +265,29 @@ h4 span:first-child {
 		</aside>
 		<div class="col-sm-9">
 			<div class="row">
+			<div class="col-sm-12">
+				<h4 class="strike-through">
+					<span></span>
+					<span class="date">
+						2017-11-13 — 
+					</span>
+				</h4>
+				<div class="website pull-right">
+					<a href="http://halogen.tv">http://halogen.tv</a>
+				</div>
+				<div class="position">
+					Frontend Developer
+				</div>
+				<div class="summary">
+					<p>Using Elm, JavaScript and Web Components to build a modern live streaming platform, called Halogen, for artists and creatives</p>
+				</div>
+				<h4>Highlights</h4>
+				<ul class="highlights">
+					<li class="bullet">Halogen is over 50k lines</li>
+					<li class="bullet">Helped transition an Elm app from 0.18 and BEM style CSS, to TailwindCSS and upgraded to 0.19 version of Elm</li>
+					<li class="bullet">I own (most of) the Accessibility work. Accessibility is very important to me. So I try to make our app as accessible as possible.</li>
+				</ul>
+			</div>
 			<div class="col-sm-12">
 				<h4 class="strike-through">
 					<span>Web Benefits Design</span>
@@ -329,7 +352,7 @@ h4 span:first-child {
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
-					<li class="bullet">When possible I gave extracurricular lectures and activities to expose students to topics I thought they needed to know. Such as es6 features and functional programming techniques not covered in the curriculum as well as git fundamentals</li>
+					<li class="bullet">When possible I gave extracurricular lectures and activities to expose students to topics I thought they needed to know. Such as es6 features, functional programming techniques and  git fundamentals</li>
 				</ul>
 			</div>
 			<div class="col-sm-12">
@@ -450,24 +473,6 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-12">
 				<h4 class="strike-through">
-					<span>Medium</span>
-					<span class="date">
-						2016-07
-					</span>
-				</h4>
-				<div class="website pull-right">
-					<a href="https://medium.com/@dwightdoane"></a>
-				</div>
-				<div class="publisher">
-					<em>Published by</em>
-					<strong>medium.com</strong>
-				</div>
-				<div class="summary">
-					<p>My old blog</p>
-				</div>
-			</div>
-			<div class="col-sm-12">
-				<h4 class="strike-through">
 					<span>blog</span>
 					<span class="date">
 						2017-04
@@ -481,7 +486,7 @@ h4 span:first-child {
 					<strong>TorchShip</strong>
 				</div>
 				<div class="summary">
-					<p>Working on my side hustle. Where I write about my expiernces hacking on personal projects.</p>
+					<p>Working on my side hustle. Where I write about my expiernces hacking on personal projects. (WIP)</p>
 				</div>
 			</div>
 			</div>
@@ -505,14 +510,15 @@ h4 span:first-child {
 					<li>Node.js</li>
 					<li>mongodb</li>
 					<li>mysql</li>
-					<li>angular</li>
+					<li>angular 1</li>
 					<li>react</li>
 					<li>redux</li>
-					<li>vue &lt;3</li>
+					<li>vue</li>
 					<li>vuex</li>
 					<li>git</li>
+					<li>Elm</li>
+					<li>(Learning) Haskell</li>
 					<li>functional programming</li>
-					<li>(learning) elm</li>
 				</ul>
 			</div>
 			</div>
@@ -545,11 +551,15 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-6">
 				<div class="name">
-					<h4>Automotive</h4>
+					<h4>Fun Stuff</h4>
 				</div>
 				<ul class="keywords">
 					<li>Miatas</li>
+					<li>WRX</li>
 					<li>Driving fast</li>
+					<li>Camping</li>
+					<li>Outdoor Recreation</li>
+					<li>Travel</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
@@ -565,6 +575,8 @@ h4 span:first-child {
 					<li>IOT</li>
 					<li>node</li>
 					<li>JavaScript</li>
+					<li>creative coding</li>
+					<li>Teaching!</li>
 				</ul>
 			</div>
 			</div>
