--- a/resume.html
+++ b/resume.html
@@ -486,7 +486,7 @@ h4 span:first-child {
 					<strong>TorchShip</strong>
 				</div>
 				<div class="summary">
-					<p>Working on my side hustle. Where I write about my expiernces hacking on personal projects. (WIP)</p>
+					<p>Working on my side hustle. Where I write about my experiences hacking on personal projects. (WIP)</p>
 				</div>
 			</div>
 			</div>
