update link to blog

--- a/resume.html
+++ b/resume.html
@@ -479,7 +479,7 @@ h4 span:first-child {
 					</span>
 				</h4>
 				<div class="website pull-right">
-					<a href="http://logs.torchship.co"></a>
+					<a href="https://dwit.us/blog"></a>
 				</div>
 				<div class="publisher">
 					<em>Published by</em>
