just some updates

--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
         <div class="about">
           <p class="about__heading">I'm a developer living and working in Central Florida</p>
           <p class="about__txt">I work at Omicron Media</p>
-          <p class="about__txt">I <3 all things javascript</p> <p class="about__txt">I'm learning elm</p>
+          <p class="about__txt">I write Elm and JavaScript</p>
         </div>
       </div>
       <div class="wrapper__item">
         <div class="personal">
-          <p class="personal__heading">Miata enthusiast && cat person</p>
-          <p class="personal__txt">I have 2 miatas ( 91 NA && 00 NB)</p>
+          <p class="personal__heading">Car and cat enthusiast</p>
+          <p class="personal__txt">I have 00 NB Miata and 18 WRX</p>
           <p class="personal__txt">I have 2 cats ( Toby && Rupert )</p>
         </div>
       </div>
     </section>
     <div>
-      <img class="me" src="https://fooship.imgix.net/484ca00e2215f3f6702baf51a334a4a5" alt="me">
+      <img class="me" alt="" src="https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=840" srcset="https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=840&dpr=1
+        https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=840&dpr=2" />
     </div>
     <footer>
       <p class="footer-links">You can find me on:
