--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
     </section>
     <div>
-      <img class="me" alt="" src="https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=840" srcset="https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=840&dpr=1
-        https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=840&dpr=2" />
+      <img class="me" src="https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=350" srcset="https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=350&dpr=1 1x,
+      https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=350&dpr=2 2x," />
     </div>
     <footer>
       <p class="footer-links">You can find me on:
