--- a/index.html
+++ b/index.html
@@ -9,34 +9,23 @@
   <link href="./css/style.css" rel="stylesheet" type="text/css" />
 
 <body>
-  <section class="container">
+  <main class="container">
     <h1>Dwight Doane</h1>
-    <section class="wrapper">
-      <div class="wrapper__item">
-        <div class="about">
-          <p class="about__heading">I'm a developer living and working in Central Florida</p>
-          <p class="about__txt">I work at Omicron Media</p>
-          <p class="about__txt">I write Elm and JavaScript</p>
-        </div>
-      </div>
-      <div class="wrapper__item">
-        <div class="personal">
-          <p class="personal__heading">Car and cat enthusiast</p>
-          <p class="personal__txt">I have 00 NB Miata and 18 WRX</p>
-          <p class="personal__txt">I have 2 cats ( Toby && Rupert )</p>
-        </div>
-      </div>
-    </section>
-    <div>
-      <img class="me" src="https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=350" srcset="https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=350&dpr=1 1x,
-      https://fooship.imgix.net/ccb0e1416126ad8b96d3ff8e015514d5?w=350&dpr=2 2x," />
+    <div class="wrapper">
+      <p>I'm a Web Developer living and working on the road with my girlfriend and 2 cats.</p>
+      <p>I'm available for contract work or Elm consulting.<p>
+      </br>
+      <p>I'm into things like: functional programming, the outdoors, philosophy and reading.</p>
+      <p>You can follow our journey over at <a href="https://neotenites.com">neotenites.com</a></p>
+      <p>I guess you could say we're "digital nomads."</p>
+      <p>We live in a 40ft 5th wheel and travel fulltime.</p>
+
+      
     </div>
+    
     <footer>
-      <p class="footer-links">You can find me on:
+      <p class="footer-links">Contact me:
         <br class="hidden-lg" />
-        <a class="footer-links__twitter" href="https://twitter.com/iamdwit" target="_blank">
-          <i class="fa fa-twitter" aria-hidden="true">&nbsp;</i>
-          @iamdwit</a>
         <a class="footer-links__github" href="https://github.com/imdwit" target="_blank">
           <i class="fa fa-github" aria-hidden="true">&nbsp;</i>
           @imdwit</a>
@@ -50,16 +39,19 @@
           <i class="fa fa-id-card-o" aria-hidden="true">&nbsp;</i>
           resume</a>
     </footer>
-  </section>
+  </main>
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-80901998-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-80901998-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    type="text/css" />
 </body>
 
 </html>
