--- a/resume.html
+++ b/resume.html
@@ -225,7 +225,7 @@ h4 span:first-child {
 			<div class="col-sm-6">
 				<strong>Website</strong>
 				<div class="website">
-					<a href="https://dwit.us">https://dwit.us</a>
+					<a href="m0n01d.com">m0n01d.com</a>
 				</div>
 			</div>
 			</div>
@@ -251,7 +251,7 @@ h4 span:first-child {
 					</strong>
 					<div class="username">
 						<div class="url">
-							<a href="https://twitter.com/iamdwit">@iamdwit</a>
+							<a href="https://twitter.com/m0n01d">@m0n01d</a>
 						</div>
 					</div>
 				</div>
@@ -267,9 +267,34 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-12">
 				<h4 class="strike-through">
+					<span>CareRev</span>
+					<span class="date">
+						2021-08-14 — 
+					</span>
+				</h4>
+				<div class="website pull-right">
+					<a href="https://carerev.com">https://carerev.com</a>
+				</div>
+				<div class="position">
+					Senior Frontend Engineer
+				</div>
+				<div class="summary">
+					<p>Helped rewrite CareRev&#x27;s React.js based Facility app into a modern Elm application.</p>
+				</div>
+				<h4>Highlights</h4>
+				<ul class="highlights">
+					<li class="bullet">Mentored junior engineers learning Elm</li>
+					<li class="bullet">Onboarded engineers of various skill level into an Elm codebase</li>
+					<li class="bullet">Setup code practices and standards for Elm development</li>
+					<li class="bullet">Worked with designers to implement a design system using TailwindCSS</li>
+					<li class="bullet">Shipped.</li>
+				</ul>
+			</div>
+			<div class="col-sm-12">
+				<h4 class="strike-through">
 					<span>Triller</span>
 					<span class="date">
-						2020-09-04 — 
+						2020-09-04 — 2021-08-01
 					</span>
 				</h4>
 				<div class="website pull-right">
@@ -305,7 +330,7 @@ h4 span:first-child {
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
-					<li class="bullet">Halogen was over 120k lines</li>
+					<li class="bullet">Halogen was over 120k lines of Elm</li>
 					<li class="bullet">Helped transition an Elm app from 0.18 and BEM style CSS, to TailwindCSS and upgraded to 0.19 version of Elm</li>
 				</ul>
 			</div>
