--- a/resume.html
+++ b/resume.html
@@ -225,7 +225,7 @@ h4 span:first-child {
 			<div class="col-sm-6">
 				<strong>Website</strong>
 				<div class="website">
-					<a href="m0n01d.com">m0n01d.com</a>
+					<a href="https://m0n01d.com">https://m0n01d.com</a>
 				</div>
 			</div>
 			</div>
@@ -236,26 +236,7 @@ h4 span:first-child {
 			<h3>About</h3>
 		</aside>
 		<div class="col-sm-9">
-			<p>Dwight Doane is a passionate developer obsessed with the World Wide Web.</p>
-		</div>
-	</section>
-	<section id="profiles" class="row">
-		<aside class="col-sm-3">
-			<h3>Profiles</h3>
-		</aside>
-		<div class="col-sm-9">
-			<div class="row">
-				<div class="col-sm-6">
-					<strong class="network">
-						Twitter
-					</strong>
-					<div class="username">
-						<div class="url">
-							<a href="https://twitter.com/m0n01d">@m0n01d</a>
-						</div>
-					</div>
-				</div>
-			</div>
+			<p>Dwight Doane is a passionate developer obsessed with the World Wide Web and functional programming.</p>
 		</div>
 	</section>
 
@@ -269,7 +250,7 @@ h4 span:first-child {
 				<h4 class="strike-through">
 					<span>CareRev</span>
 					<span class="date">
-						2021-08-14 — 
+						2021-08-14 — 2023-06-16
 					</span>
 				</h4>
 				<div class="website pull-right">
@@ -283,10 +264,14 @@ h4 span:first-child {
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
+					<li class="bullet">Conducted hiring interviews, and created code challenges to vet candidates</li>
+					<li class="bullet">helped more than double the codebase while shipping high quality  features on time and budget</li>
+					<li class="bullet">used codegen tools to automate and script tedious tasks like Amplitude tracking</li>
 					<li class="bullet">Mentored junior engineers learning Elm</li>
 					<li class="bullet">Onboarded engineers of various skill level into an Elm codebase</li>
 					<li class="bullet">Setup code practices and standards for Elm development</li>
 					<li class="bullet">Worked with designers to implement a design system using TailwindCSS</li>
+					<li class="bullet">Setup storybook for visualizing our design system and Ui</li>
 					<li class="bullet">Shipped.</li>
 				</ul>
 			</div>
